<resources>
    <string name="app_name">ManillasXYZ</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="text_leather">Leather</string>
    <string name="text_rope">Rope</string>
    <string name="text_hammer">Hammer</string>
    <string name="text_anchor">Anchor</string>

    <string-array name="types">
        <item>Gold</item>
        <item>Pink Gold</item>
        <item>Silver</item>
        <item>Nickel</item>
    </string-array>

    <string-array name="currencies">
        <item>USD</item>
        <item>COP</item>
    </string-array>
    <string name="button_show">Calulate</string>
    <string name="message_empty_field">Field cannot be empty</string>
    <string name="message_number_format">Not a number</string>
    <string name="message_result">Result:</string>
    <string name="alert_dialog_ok">Ok</string>
    <string name="label_amount">Amount</string>
    <string name="label_material">Material</string>
    <string name="label_pendant">Pendant</string>
    <string name="label_type">Type</string>
    <string name="label_currency">Currency</string>

</resources>
