<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:orientation="horizontal" >
        <TextView
            android:text="@string/label_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3" />
        <EditText android:id="@+id/amount"
            android:inputType="number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.7" />
    </LinearLayout>

    <TextView
        android:text="@string/label_material"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <RadioGroup android:id="@+id/radio_group_material"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:orientation="horizontal">
        <RadioButton android:id="@+id/radio_button_leather"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_leather" />
        <RadioButton android:id="@+id/radio_button_rope"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_rope" />
    </RadioGroup>

    <TextView
        android:text="@string/label_pendant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <RadioGroup android:id="@+id/radio_group_pendant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:orientation="horizontal" >
        <RadioButton android:id="@+id/radio_button_hammer"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_hammer" />
        <RadioButton android:id="@+id/radio_button_anchor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_anchor" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:orientation="horizontal" >
        <TextView
            android:text="@string/label_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3" />
        <Spinner android:id="@+id/spinner_type"
            android:entries="@array/types"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:orientation="horizontal" >
        <TextView
            android:text="@string/label_currency"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3" />
        <Spinner android:id="@+id/spinner_currency"
            android:entries="@array/currencies"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7" />
    </LinearLayout>

    <Button android:id="@+id/button_show"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?actionButtonStyle"
        android:onClick="show"
        android:text="@string/button_show" />

</LinearLayout>
